--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Theme Switcher</title>
+  <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+<div id="menu-container">
+  <button id="theme-switcher-button" aria-haspopup="true" aria-expanded="false" aria-controls="theme-dropdown">Switch Theme</button>
+  <ul id="theme-dropdown" role="menu" aria-labelledby="theme-switcher-button">
+    <li role="menuitem" id="theme-light">Light</li>
+    <li role="menuitem" id="theme-dark">Dark</li>
+    <li role="menuitem" id="theme-ocean">Ocean</li>
+    <li role="menuitem" id="theme-nord">Nord</li>
+  </ul>
+</div>
+<div aria-live="polite"></div>
+  <script src="./script.js"></script>
+</body>
+</html>
