--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <li role="menuitem" id="theme-nord">Nord</li>
   </ul>
 </div>
-<div aria-live="polite"></div>
+<div aria-live="polite">
+</div>
   <script src="./script.js"></script>
 </body>
 </html>
