--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="menu-container">
   <button id="theme-switcher-button" aria-haspopup="true" aria-expanded="false" aria-controls="theme-dropdown">Switch Theme</button>
-  <ul id="theme-dropdown" role="menu" aria-labelledby="theme-switcher-button">
+  <ul id="theme-dropdown" role="menu" aria-labelledby="theme-switcher-button" hidden>
     <li role="menuitem" id="theme-light">Light</li>
     <li role="menuitem" id="theme-dark">Dark</li>
     <li role="menuitem" id="theme-ocean">Ocean</li>
