--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li role="menuitem" id="theme-nord">Nord</li>
   </ul>
 </div>
-<div aria-live="polite">
+<div id="status" aria-live="polite">
 </div>
   <script src="./script.js"></script>
 </body>
